--- a/employee_access.html
+++ b/employee_access.html
@@ -356,20 +356,27 @@ function calcExpress(sums){
 
   EXPRESS_PACKS.forEach(pack => {
     let score = 0;
-    const finishDiff = Math.abs(pack.finish - sums.finish);
-    const movableDiff = Math.abs((pack.movable || 0) - sums.movable);
 
-    // Better score for closer matches
-    if (finishDiff <= 50000) score += 3;
-    else if (finishDiff <= 100000) score += 2;
-    else if (finishDiff <= 200000) score += 1;
+    // If entered finish is much larger than package, prefer packages with higher finish amounts
+    if (sums.finish > pack.finish) {
+      // Give higher score to packages with higher coverage
+      score += (pack.finish / 100000) * 2;
+      score += ((pack.movable || 0) / 50000) * 1;
+    } else {
+      // Normal matching logic for smaller or equal amounts
+      const finishRatio = pack.finish / Math.max(sums.finish, 1);
+      if (finishRatio >= 0.8) score += 3; // Very close match
+      else if (finishRatio >= 0.5) score += 2; // Good match
+      else if (finishRatio >= 0.3) score += 1; // Acceptable match
 
-    if (movableDiff <= 25000) score += 2;
-    else if (movableDiff <= 50000) score += 1;
+      const movableRatio = (pack.movable || 0) / Math.max(sums.movable, 1);
+      if (sums.movable > 0 && movableRatio >= 0.8) score += 2;
+      else if (sums.movable > 0 && movableRatio >= 0.4) score += 1;
+    }
 
-    // Prefer packs that are not too much larger than needed
-    if (pack.finish <= sums.finish * 1.5) score += 1;
-    if ((pack.movable || 0) <= sums.movable * 1.5) score += 1;
+    // Always prefer packages with higher coverage amounts
+    score += (pack.finish / 100000) * 0.5;
+    score += ((pack.movable || 0) / 50000) * 0.3;
 
     if (score > bestScore) {
       bestScore = score;
